tests/resources/valid/error/raise.mamba
def f(x: Int): Int raises[Err] => if x > 0 then raise Err("asdf") else 10

f(10) raises [MyErr]
